2009-02-28  Sven Neumann  <sven@gimp.org>

	* libgimp/gimpregioniterator.c: update the progress less often.

	* plug-ins/common/ripple.c: formatting.

2009-02-28  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/file-svg.c: reverted accidental commit.

2009-02-28  Sven Neumann  <sven@gimp.org>

	Bug 573488 – Small bug in Filter>Distorts>Ripple

	* plug-ins/common/ripple.c (ripple_vertical): fixed bug spotted in
	SMEAR mode, pointed out by Andreas Groth.

2009-02-28  Sven Neumann  <sven@gimp.org>

	Bug 520078 – Rotate brushes

	* app/core/gimpbrush-transform.c: applied patch from Tal that
	implements bilinear interpolation for the brush transformations.

2009-02-28  Martin Nordholts  <martinn@svn.gnome.org>

	* app/actions/debug-commands.c: Properly show name of image graph
	source image

2009-02-26  Sven Neumann  <sven@gimp.org>

	* app/gui/gui.c (gui_restore_callback): connect to changes of the
	"user-manual-online" gimprc property and kill the gimp-help
	plug-in as it caches the location of the help pages.

	* app/widgets/gimphelp.[ch]: added gimp_help_user_manual_changed()
	for this purpose.

2009-02-25  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/file-pcx.c: sprinkled with const qualifiers.

2009-02-23  Martin Nordholts  <martinn@svn.gnome.org>

	Add a Show Image Graph item to the Debug menu that creates a new image
	showing the GEGL graph for the image. Would benefit from an enhanced
	gegl:introspect op with a clearer graph, but still quite interesting
	in its current shape.

        * app/actions/debug-actions.c
        * app/actions/debug-commands.[ch]
        * menus/image-menu.xml.in

2009-02-23  Martin Nordholts  <martinn@svn.gnome.org>

        * app/gegl/gimp-gegl-utils.[ch]: Add a GEGL utility function
	gimp_buffer_to_tiles()

2009-02-23  Sven Neumann  <sven@gimp.org>

	* plug-ins/pygimp/gimpfu.py (register): warn if a script uses the
	decprecated way of registering its menu location.

2009-02-22  Marco Ciampa  <ciampix@libero.it>
